<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/jryn_logo"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/jryn_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/title_style"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:text="@string/register_title"/>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:inputType="phone"
                android:hint="@string/hint_phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/edt_confimationcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:hint= "@string/enter_confirmation_code" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_code"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/rounded_bg"
            android:text="@string/send_confirmation_code"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/rounded_bg"
            android:text="@string/btn_register"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/rounded_bg"
            android:text="@string/btn_login"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </LinearLayout>

</LinearLayout>