<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        style="@style/package_title_style"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/purchase_detail"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/package_detail_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/package_name" />

            <TextView
                android:id="@+id/package_name"
                style="@style/package_price_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TextView
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                style="@style/package_detail_style"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/reserve_date"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"
                    style="@style/package_style_button"/>

                <TextView
                    android:id="@+id/change_date"
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Change"
                    style="@style/change_date_style"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_weight="1"
                android:text="@string/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/package_detail_style"/>

            <TextView
                android:id="@+id/reserve_notes"
                android:layout_weight="1"
                android:text="N/A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/package_price_style"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_update"
            android:text="@string/update"
            android:background="@drawable/selector"
            android:textColor="@android:color/white"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_delete"
            android:text="@string/delete"
            android:background="@drawable/rounded_bg_purple"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>