<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:animateLayoutChanges="true"
    android:padding="20dp"
    android:id="@+id/relative"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent ="true">
        
        <ImageView
            android:id="@+id/jryn_logo"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/jryn_logo"/>

        <RelativeLayout
            android:id="@+id/relative_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jryn_logo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/jryn_logo"
                    style="@style/title_style"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/login_title"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/activity_vertical_margin">

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        android:textColor="@android:color/white"
                        android:hint="@string/hint_password" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_gravity="center"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/rounded_bg"
                        android:text="@string/btn_login"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_gravity="center"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:background="@drawable/rounded_bg"
                        android:text="@string/btn_register"/>


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>


